tinyParser.py
# Generated from tiny.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class tinyParser ( Parser ):

    grammarFileName = "tiny.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "','", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'=='", "'>'", "'return'", 
                     "'var'", "'output'", "'input'", "'if'", "'else'", "'while'", 
                     "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ADD", "SUB", 
                      "MUL", "DIV", "EQ", "GR", "RETURN", "VAR", "OUTPUT", 
                      "INPUT", "IF", "ELSE", "WHILE", "SEMI", "ID", "INT", 
                      "WS" ]

    RULE_program = 0
    RULE_fun_head = 1
    RULE_fun = 2
    RULE_id_list = 3
    RULE_exp_list = 4
    RULE_stm = 5
    RULE_else = 6
    RULE_exp = 7
    RULE_fun_call = 8

    ruleNames =  [ "program", "fun_head", "fun", "id_list", "exp_list", 
                   "stm", "else", "exp", "fun_call" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    ADD=7
    SUB=8
    MUL=9
    DIV=10
    EQ=11
    GR=12
    RETURN=13
    VAR=14
    OUTPUT=15
    INPUT=16
    IF=17
    ELSE=18
    WHILE=19
    SEMI=20
    ID=21
    INT=22
    WS=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fun(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tinyParser.FunContext)
            else:
                return self.getTypedRuleContext(tinyParser.FunContext,i)


        def getRuleIndex(self):
            return tinyParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = tinyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 18
                self.fun()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fun_headContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(tinyParser.ID, 0)

        def id_list(self):
            return self.getTypedRuleContext(tinyParser.Id_listContext,0)


        def getRuleIndex(self):
            return tinyParser.RULE_fun_head

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFun_head" ):
                return visitor.visitFun_head(self)
            else:
                return visitor.visitChildren(self)




    def fun_head(self):

        localctx = tinyParser.Fun_headContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_fun_head)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(tinyParser.ID)
            self.state = 25
            self.match(tinyParser.T__0)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21:
                self.state = 26
                self.id_list()


            self.state = 29
            self.match(tinyParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fun_head(self):
            return self.getTypedRuleContext(tinyParser.Fun_headContext,0)


        def RETURN(self):
            return self.getToken(tinyParser.RETURN, 0)

        def exp(self):
            return self.getTypedRuleContext(tinyParser.ExpContext,0)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(tinyParser.SEMI)
            else:
                return self.getToken(tinyParser.SEMI, i)

        def VAR(self):
            return self.getToken(tinyParser.VAR, 0)

        def id_list(self):
            return self.getTypedRuleContext(tinyParser.Id_listContext,0)


        def stm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tinyParser.StmContext)
            else:
                return self.getTypedRuleContext(tinyParser.StmContext,i)


        def getRuleIndex(self):
            return tinyParser.RULE_fun

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFun" ):
                return visitor.visitFun(self)
            else:
                return visitor.visitChildren(self)




    def fun(self):

        localctx = tinyParser.FunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_fun)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.fun_head()
            self.state = 32
            self.match(tinyParser.T__2)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 33
                self.match(tinyParser.VAR)
                self.state = 34
                self.id_list()
                self.state = 35
                self.match(tinyParser.SEMI)


            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2785280) != 0):
                self.state = 39
                self.stm()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 45
            self.match(tinyParser.RETURN)
            self.state = 46
            self.exp(0)
            self.state = 47
            self.match(tinyParser.SEMI)
            self.state = 48
            self.match(tinyParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(tinyParser.ID)
            else:
                return self.getToken(tinyParser.ID, i)

        def getRuleIndex(self):
            return tinyParser.RULE_id_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = tinyParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(tinyParser.ID)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 51
                self.match(tinyParser.T__4)
                self.state = 52
                self.match(tinyParser.ID)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tinyParser.ExpContext)
            else:
                return self.getTypedRuleContext(tinyParser.ExpContext,i)


        def getRuleIndex(self):
            return tinyParser.RULE_exp_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_list" ):
                return visitor.visitExp_list(self)
            else:
                return visitor.visitChildren(self)




    def exp_list(self):

        localctx = tinyParser.Exp_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exp_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.exp(0)
            self.state = 63
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 59
                    self.match(tinyParser.T__4)
                    self.state = 60
                    self.exp(0) 
                self.state = 65
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(tinyParser.ID, 0)

        def exp(self):
            return self.getTypedRuleContext(tinyParser.ExpContext,0)


        def SEMI(self):
            return self.getToken(tinyParser.SEMI, 0)

        def OUTPUT(self):
            return self.getToken(tinyParser.OUTPUT, 0)

        def IF(self):
            return self.getToken(tinyParser.IF, 0)

        def stm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tinyParser.StmContext)
            else:
                return self.getTypedRuleContext(tinyParser.StmContext,i)


        def else_(self):
            return self.getTypedRuleContext(tinyParser.ElseContext,0)


        def WHILE(self):
            return self.getToken(tinyParser.WHILE, 0)

        def getRuleIndex(self):
            return tinyParser.RULE_stm

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStm" ):
                return visitor.visitStm(self)
            else:
                return visitor.visitChildren(self)




    def stm(self):

        localctx = tinyParser.StmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stm)
        self._la = 0 # Token type
        try:
            self.state = 103
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [21]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.match(tinyParser.ID)
                self.state = 67
                self.match(tinyParser.T__5)
                self.state = 68
                self.exp(0)
                self.state = 69
                self.match(tinyParser.SEMI)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(tinyParser.OUTPUT)
                self.state = 72
                self.exp(0)
                self.state = 73
                self.match(tinyParser.SEMI)
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self.match(tinyParser.IF)
                self.state = 76
                self.match(tinyParser.T__0)
                self.state = 77
                self.exp(0)
                self.state = 78
                self.match(tinyParser.T__1)
                self.state = 79
                self.match(tinyParser.T__2)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2785280) != 0):
                    self.state = 80
                    self.stm()
                    self.state = 85
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 86
                self.match(tinyParser.T__3)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==18:
                    self.state = 87
                    self.else_()


                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.match(tinyParser.WHILE)
                self.state = 91
                self.match(tinyParser.T__0)
                self.state = 92
                self.exp(0)
                self.state = 93
                self.match(tinyParser.T__1)
                self.state = 94
                self.match(tinyParser.T__2)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2785280) != 0):
                    self.state = 95
                    self.stm()
                    self.state = 100
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 101
                self.match(tinyParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(tinyParser.ELSE, 0)

        def stm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tinyParser.StmContext)
            else:
                return self.getTypedRuleContext(tinyParser.StmContext,i)


        def getRuleIndex(self):
            return tinyParser.RULE_else

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse" ):
                return visitor.visitElse(self)
            else:
                return visitor.visitChildren(self)




    def else_(self):

        localctx = tinyParser.ElseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_else)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(tinyParser.ELSE)
            self.state = 106
            self.match(tinyParser.T__2)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2785280) != 0):
                self.state = 107
                self.stm()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(tinyParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(tinyParser.INT, 0)

        def ID(self):
            return self.getToken(tinyParser.ID, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(tinyParser.ExpContext)
            else:
                return self.getTypedRuleContext(tinyParser.ExpContext,i)


        def INPUT(self):
            return self.getToken(tinyParser.INPUT, 0)

        def fun_call(self):
            return self.getTypedRuleContext(tinyParser.Fun_callContext,0)


        def MUL(self):
            return self.getToken(tinyParser.MUL, 0)

        def DIV(self):
            return self.getToken(tinyParser.DIV, 0)

        def ADD(self):
            return self.getToken(tinyParser.ADD, 0)

        def SUB(self):
            return self.getToken(tinyParser.SUB, 0)

        def GR(self):
            return self.getToken(tinyParser.GR, 0)

        def EQ(self):
            return self.getToken(tinyParser.EQ, 0)

        def getRuleIndex(self):
            return tinyParser.RULE_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)



    def exp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = tinyParser.ExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_exp, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 116
                self.match(tinyParser.INT)
                pass

            elif la_ == 2:
                self.state = 117
                self.match(tinyParser.ID)
                pass

            elif la_ == 3:
                self.state = 118
                self.match(tinyParser.T__0)
                self.state = 119
                self.exp(0)
                self.state = 120
                self.match(tinyParser.T__1)
                pass

            elif la_ == 4:
                self.state = 122
                self.match(tinyParser.INPUT)
                pass

            elif la_ == 5:
                self.state = 123
                self.fun_call()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 146
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 144
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = tinyParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 126
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 127
                        self.match(tinyParser.MUL)
                        self.state = 128
                        self.exp(10)
                        pass

                    elif la_ == 2:
                        localctx = tinyParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 129
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 130
                        self.match(tinyParser.DIV)
                        self.state = 131
                        self.exp(9)
                        pass

                    elif la_ == 3:
                        localctx = tinyParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 132
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 133
                        self.match(tinyParser.ADD)
                        self.state = 134
                        self.exp(8)
                        pass

                    elif la_ == 4:
                        localctx = tinyParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 135
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 136
                        self.match(tinyParser.SUB)
                        self.state = 137
                        self.exp(7)
                        pass

                    elif la_ == 5:
                        localctx = tinyParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 138
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 139
                        self.match(tinyParser.GR)
                        self.state = 140
                        self.exp(6)
                        pass

                    elif la_ == 6:
                        localctx = tinyParser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 141
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 142
                        self.match(tinyParser.EQ)
                        self.state = 143
                        self.exp(5)
                        pass

             
                self.state = 148
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Fun_callContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(tinyParser.ID, 0)

        def exp_list(self):
            return self.getTypedRuleContext(tinyParser.Exp_listContext,0)


        def getRuleIndex(self):
            return tinyParser.RULE_fun_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFun_call" ):
                return visitor.visitFun_call(self)
            else:
                return visitor.visitChildren(self)




    def fun_call(self):

        localctx = tinyParser.Fun_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_fun_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(tinyParser.ID)

            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 150
                self.exp_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[7] = self.exp_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def exp_sempred(self, localctx:ExpContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 8)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 5:
                return self.precpred(self._ctx, 4)
         




